Java8 compliance, fix a bug and readme update